--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li class="hover:text-gray-500 dark:text-gray-300"><a href="#portfolio">Works</a></li>
                     <li class="hover:text-gray-500 dark:text-gray-300"><a href="#contact">Contact</a></li>
                 </ul>
-                <img id="moon" class="w-8 cursor-pointer mr-10 " src="./images/moon.jpg" alt="">
+                <img id="moon" class="w-8 cursor-pointer mr-10 " src="./images/moon.png" alt="">
                 <div id="hamburger" class="space-y-1 md:hidden cursor-pointer z-20">
                     <div class="w-6 h-0.5 bg-black"></div>
                     <div class="w-6 h-0.5 bg-black"></div>
